# usbypass

./: .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
debian/: changelog  control  copyright  postinst  postrm  prerm  rules  usbypass.install
debian/pam-config.d/: usbypass
debian/udev-rules.d/: 99-usbypass.rules
docs/: architecture.md  enrollment.md  pam-stack.md  security.md  troubleshooting.md
packaging/arch/: 99-usbypass.rules  PKGBUILD  usbypass.install
packaging/rpm/: 99-usbypass.rules  usbypass.spec
pam/: usbypass.pam-config  usbypass.pam-snippet
scripts/: usbypass  usbypass-pam-helper  usbypass-udev-handler
src/usbypass/: __init__.py  __main__.py  cli.py  config.py  crypto.py  enroll.py  enrollment.py  handler.py  interactive.py  logger.py  pam_installer.py  state.py  ui.py  usb.py  verify.py
systemd/: usbypass-clear-sudo.service  usbypass-verify-boot.service  usbypass-verify@.service
tests/: conftest.py  smoke.py  test_crypto.py  test_enrollment.py  test_pam_installer.py  test_state.py  test_usb_fastpath.py
udev/: 99-usbypass.rules
